objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Sales Process</fullName>
        <description>This is the sales procces to sell to business customers.</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Stage</fullName>
        </values>
        <values>
            <fullName>2 Stage</fullName>
        </values>
        <values>
            <fullName>3 Stage</fullName>
        </values>
        <values>
            <fullName>4 Stage</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Other other</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Provisioing Completed</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2C Sales Process</fullName>
        <description>This is the sales procces to sell to home users.</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Stage</fullName>
        </values>
        <values>
            <fullName>2 Stage</fullName>
        </values>
        <values>
            <fullName>3 Stage</fullName>
        </values>
        <values>
            <fullName>4 Stage</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Provisioing Completed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Sale</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>2 Stage</fullName>
        </values>
        <values>
            <fullName>3 Stage</fullName>
        </values>
        <values>
            <fullName>4 Stage</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New sales process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1 Stage</fullName>
        </values>
        <values>
            <fullName>2 Stage</fullName>
        </values>
        <values>
            <fullName>3 Stage</fullName>
        </values>
        <values>
            <fullName>4 Stage</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Other other</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Provisioing Completed</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Approver_Custom__c</fullName>
        <label>Actual Approver Custom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_date__c</fullName>
        <label>Booking date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_opp__c</fullName>
        <label>Brand opp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Exp_Month__c</fullName>
        <label>CC Exp Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Exp_Year__c</fullName>
        <defaultValue>YEAR( TODAY() )</defaultValue>
        <label>CC Exp Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clien_Type_from_account__c</fullName>
        <formula>TEXT( Account.Business_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clien Type from account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Caterers</fullName>
                </value>
                <value>
                    <fullName>Contract Caterer</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Events Company</fullName>
                </value>
                <value>
                    <fullName>Event Space</fullName>
                </value>
                <value>
                    <fullName>Event Venue</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Restaurant &amp; Events Group</fullName>
                </value>
                <value>
                    <fullName>Restaurant Group</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Yearly Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commision__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commision</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_cutom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact cutom</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <inlineHelpText>Credit card Number</inlineHelpText>
        <label>Credit Card Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency1_x_Currency2__c</fullName>
        <formula>ROUND( Currency_1__c * Currency_2__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency1 x Currency2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_1__c</fullName>
        <label>Currency 1</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_2__c</fullName>
        <label>Currency 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_result__c</fullName>
        <label>Currency result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DATE_field__c</fullName>
        <label>DATE-field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagram__c</fullName>
        <label>Diagram</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discount_percent__c</fullName>
        <defaultValue>0.1</defaultValue>
        <label>Discount percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>Amount  * (1- Discount_percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_fee__c</fullName>
        <label>Fixed fee *</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ISC_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISC Planning</label>
        <referenceTo>ISC_Planning__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intervention_Country_Primary__c</fullName>
        <label>Intervention Country Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_High__c</fullName>
        <label>Number High</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Low__c</fullName>
        <label>Number Low</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Shifts_per_Week_in_account__c</fullName>
        <formula>Account.Default_Number_of_Shifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Shifts per Week in account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofShifts__c</fullName>
        <label>Number of Shifts per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Number__c</fullName>
        <displayFormat>ON-{0000}</displayFormat>
        <label>Opp Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_custom_field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity custom field</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Mortem_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mark a competitive loss review as complete.
Should only be used when opportunities are closed - lost to a competitor</description>
        <inlineHelpText>Mark this as complete when the closed - lost review is</inlineHelpText>
        <label>Post Mortem Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <inlineHelpText>Choose the product you are interested in.</inlineHelpText>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Laptop</fullName>
                </value>
                <value>
                    <fullName>Consumer Desktop</fullName>
                </value>
                <value>
                    <fullName>Consumer Printer</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interest_multi__c</fullName>
        <label>Product Interest multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Laptop</fullName>
                </value>
                <value>
                    <fullName>Consumer desktop</fullName>
                </value>
                <value>
                    <fullName>Consumer printer</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Produt__c</fullName>
        <label>Product category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPAD</fullName>
                </value>
                <value>
                    <fullName>Otra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <description>Indicates when the project will begin.</description>
        <inlineHelpText>Indicates when the project will begin.</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>This field is used to discover why the opportunity was lost.</description>
        <inlineHelpText>Please choose a value to show why the opportunity was lost.</inlineHelpText>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Pricing</fullName>
                </value>
                <value>
                    <fullName>Competitor Product Features</fullName>
                </value>
                <value>
                    <fullName>Overall Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Needs Not Met</fullName>
                </value>
                <value>
                    <fullName>Project Abandoned</fullName>
                </value>
                <value>
                    <fullName>Company Budget Restraints</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_type_picklist__c</fullName>
        <label>Record type picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Number2__c</fullName>
        <label>Test Number</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Number_Updated__c</fullName>
        <label>Test Number Updated</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_currenty__c</fullName>
        <formula>IF( Amount  &gt; 100, &quot;&gt;100&quot; , &quot;NO &gt; 100&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text currenty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_presence__c</fullName>
        <description>es_como_lead_source</description>
        <label>Tradeshow presence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hola</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_High_Number__c</fullName>
        <label>VAT High Number</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_High__c</fullName>
        <label>VAT High</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Low_Number__c</fullName>
        <label>VAT Low Number</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Low__c</fullName>
        <label>VAT Low</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Warranty_information__c</fullName>
        <formula>TEXT( Account.Warranty__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Your profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency_formula__c</fullName>
        <formula>3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>currency formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currency_test__c</fullName>
        <label>currency test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date_test__c</fullName>
        <defaultValue>Today() + 7</defaultValue>
        <label>date test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email_account__c</fullName>
        <formula>Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>file__c</fullName>
        <formula>HYPERLINK(&quot;file://&quot;&amp;path__c,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>file</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loa_email_account__c</fullName>
        <formula>email_account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>loa email account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multi__c</fullName>
        <label>multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>qweqerqreqrqrq r erf qef</fullName>
                </value>
                <value>
                    <fullName>qre wee re rwerwer</fullName>
                </value>
                <value>
                    <fullName>qe rerfeferfwretfre r erfer re ferfwe fe</fullName>
                </value>
                <value>
                    <fullName>qwer er e rwererfwerwerwee tre re re wer</fullName>
                </value>
                <value>
                    <fullName>5wertwert  rt wretwetrrwe</fullName>
                </value>
                <value>
                    <fullName>rewer ter trtwertwe trwetert wertwert w</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>multi_picklis1__c</fullName>
        <label>multi picklis1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>multi_picklis3__c</fullName>
        <label>multi picklist 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>qw</fullName>
                </value>
                <value>
                    <fullName>qwe</fullName>
                </value>
                <value>
                    <fullName>qwer</fullName>
                </value>
                <value>
                    <fullName>asafa</fullName>
                </value>
                <value>
                    <fullName>adffdeg</fullName>
                </value>
                <value>
                    <fullName>acasvcsdfgwf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mutli_picklist_2__c</fullName>
        <label>mutli picklist 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>f</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>necesita_inspeccion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>necesita inspeccion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>new_date__c</fullName>
        <label>new date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opp_products__c</fullName>
        <label>opp products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>path__c</fullName>
        <label>path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pricebook__c</fullName>
        <formula>Pricebook2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sector__c</fullName>
        <label>sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Record_type_picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Warehousing, Transport and Logistics</fullName>
                </value>
                <value>
                    <fullName>Otro valor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stage_result__c</fullName>
        <formula>value(left(text(StageName),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>stage result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_customer_date__c</fullName>
        <label>test customer date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test_fish_stage__c</fullName>
        <formula>CreatedDate - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test fish stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_formula__c</fullName>
        <formula>test_number__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_link__c</fullName>
        <label>test link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>test_number__c</fullName>
        <label>test number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>text_number__c</fullName>
        <formula>TEXT( test_number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>text number</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>B2B</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.B2B_Record_Type</value>
        </filters>
        <label>B2B</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>B2C</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.B2C_Record_Type</value>
        </filters>
        <label>B2C</label>
        <language>en_US</language>
    </listViews>
</CustomObject>